# things-old

./: .env  .env.default  .eslintrc.json  .gitignore  .nxignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  deps-compose.yml  docker-compose.yml  jest.config.ts  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  rome.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/api/: Dockerfile  main.ts  project.json  tsconfig.app.json  webpack-hmr.config.js  webpack.config.js
api/auth/: jest.config.ts  project.json
api/data/: README.md  drizzle.config.ts  package.json  project.json  tsconfig.lib.json
api/drive/: package.json  project.json  tsconfig.lib.json
api/env/: jest.config.ts  project.json
api/shared/: .swcrc  jest.config.ts  package.json  project.json  tsconfig.lib.json
api/shell/: .env  main.ts  project.json  swagger.ts  webpack-hmr.config.js  webpack.config.js
apps/api/: project.json  webpack.config.js
apps/auth/: .eslintrc.json  clients.ts  docker-compose.yml  drizzle.config.ts  env.mjs  next.config.js  package.json  project.json  tsconfig.json  vitest.config.ts
apps/things-cli/: Cargo.toml  project.json
apps/things-cli/src/: main.rs
apps/things-cli/src/commands/: auth.rs  mod.rs  ping.rs
apps/things-cli/src/commands/auth/: mod.rs
cli/: .eslintrc  Cargo.toml  deno.json  mod.ts  project.json
scripts/: affected.sh  build-api.sh  build-info.sh  deploy-info.sh  destroy.sh  setup.sh
(+447 files in other folders)
